
[package]
authors = ["Nabil Servais <nabil@gnop.dev>"]
edition = "2021"
name = "sedonadb_js"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3.0.0"
datafusion = { version = "51.0.0"}
sedona = "0.3.0"
tokio = { version = "1.44", features = ["rt-multi-thread"]}

[build-dependencies]
napi-build = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
