
[package]
authors = ["Nabil Servais <nabil@gnop.dev>"]
edition = "2021"
name = "sedonadb_js"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3.0.0"
datafusion = { version = "52"}
arrow = { version = "57", default-features = false, features = ["prettyprint"] }
#sedona = "0.3.0"
sedona = {git = "https://github.com/apache/sedona-db", features = ["s2geography"] }
tokio = { version = "1.44", features = ["rt-multi-thread"]}

[build-dependencies]
napi-build = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
