
[package]
authors = ["Nabil Servais <nabil@gnop.dev>"]
edition = "2021"
name = "sedonadb_js"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt", "napi6", "web_stream", "serde-json"] }
napi-derive = "3.0.0"
serde_json = "1"
futures = "0.3"
datafusion = { version = "52"}
arrow = { version = "57", default-features = false, features = ["prettyprint", "ipc"] }
serde_arrow = { version = "0.14", features = ["arrow-57"] }
sedona = {git = "https://github.com/apache/sedona-db", features = ["s2geography", "tg", "spatial-join"] }
geos = { version = "11.1.1", features = ["geo", "v3_12_0"] }
sedona-tg = { git = "https://github.com/apache/sedona-db", path = "c/sedona-tg" }
tokio = { version = "1.44", features = ["rt-multi-thread"]}
lru = "0.18"
mimalloc = { version = "0.1", default-features = false }
libmimalloc-sys = "0.1.49"

[build-dependencies]
napi-build = "2"

[features]
static-geos = ["geos/static"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
